Add Maven support and properties configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ grove.npm.base-url=http://localhost:8080/npm
 grove.pypi.storage-dir=storage/pypi
 # Public base URL for pypi endpoints (no trailing slash)
 grove.pypi.base-url=http://localhost:8080/pypi
+
+# Maven repository config
+# Storage directory for maven repo (can be absolute)
+grove.maven.storage-dir=storage/maven
+# Public base URL for maven endpoints (no trailing slash)
+grove.maven.base-url=http://localhost:8080/maven
