Add OciProps class for OCI configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ grove.pypi.base-url=http://localhost:8080/pypi
 grove.maven.storage-dir=storage/maven
 # Public base URL for maven endpoints (no trailing slash)
 grove.maven.base-url=http://localhost:8080/maven
+
+# OCI registry config (Docker/OCI v2)
+# Storage directory for oci registry (can be absolute)
+grove.oci.storage-dir=storage/oci
+# Public base URL for oci endpoints (no trailing slash)
+grove.oci.base-url=http://localhost:8080/v2
